Bugfix in goreleaser config

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -12,7 +12,7 @@ builds:
       - darwin
 
 archives:
-  - format: tgz
+  - format: tar.gz
     format_overrides:
       - goos: windows
         format: zip
