--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -24,7 +24,7 @@ archives:
         - README.md
 
 checksum:
-  name_template: '{{ .ProjectName }}_{{ .Version }}_checksums.txt'
+  name_template: '{{ .ProjectName }}_{{ .Tag }}_checksums.txt'
 
 changelog:
   sort: asc
@@ -36,21 +36,7 @@ changelog:
       - Releasing
     
 release:
-  # You can disable this pipe in order to not upload any artifacts to
-  # GitHub.
-  # Defaults to false.
   disable: false
-
-  # If set to true, will not auto-publish the release.
-  # Default is false.
   draft: false
-
-  # If set to auto, will mark the release as not ready for production
-  # in case there is an indicator for this in the tag e.g. v1.0.0-rc1
-  # If set to true, will mark the release as not ready for production.
-  # Default is false.
   prerelease: false
-
-  # You can change the name of the GitHub release.
-  # Default is `{{.Tag}}`
-  name_template: "{{.ProjectName}} {{.Version}}"
+  name_template: '{{ .ProjectName }} {{ .Tag }}''
