--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -22,6 +22,7 @@ archives:
       amd64: x86_64
     files:
         - README.md
+        - LICENSE
 
 checksum:
   name_template: '{{ .ProjectName }}_{{ .Tag }}_checksums.txt'
